# CS495-Lottery-Ticket

./: CITATION.cff  LICENSE  Makefile  PLAN.md  README.md  REPORT.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: baseline_fp16.yaml  bitnet_b158.yaml  bitnet_b158_1B3.yaml  bitnet_b158_700M.yaml
models/: __init__.py
models/baseline/: __init__.py  transformer.py
models/bitnet/: __init__.py  bitlinear.py  bitnet_b158.py
scripts/benchmarking/: compare_runs.py
scripts/training/: train.py
tests/: test_models.py
utils/: __init__.py  metrics_tracker.py
