[tool.poetry]
name = "cs495-non-gpu"
version = "0.1.0"
description = "Non-GPU LLM Training: Efficient Transformer Training with BitNet b1.58"
authors = ["Sean Michael <seanwmichael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python        = "^3.11"
torch         = ">=2.1"
datasets      = ">=2.18"
transformers  = ">=4.38"
pyyaml        = ">=6.0"
psutil        = ">=5.9"
matplotlib    = ">=3.8"
numpy         = ">=1.26"
codecarbon    = {version = ">=2.3", optional = true}

[tool.poetry.extras]
carbon = ["codecarbon"]

[tool.poetry.dev-dependencies]
pytest   = ">=8.0"
ruff     = ">=0.4"
mypy     = ">=1.10"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.11"
ignore_missing_imports = true
strict                 = false

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v"
